...
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="addhabit_appbar_title">Create new habit</string>
    <string name="addhabit_name_label">Habit name</string>
    <string name="addhabit_name_error">Enter a name for new habit</string>
    <string name="addhabit_notes_label">Notes</string>
    <string name="addhabit_notes_description">Recording the exact time and location of the new habit increases the odds of sticking to it. Avoid vague habits like \"Exercise more\".</string>
    <string name="addhabit_save">Create habit</string>

    <string name="dashboard_title">My habits</string>
    <string name="dashboard_change_layout">Change layout</string>
    <string name="dashboard_empty_label">You don\'t have any habits yet.</string>
    <string name="dashboard_toggle_help">Long press to toggle</string>
    <string name="dashboard_toggle_label_toggled">Done</string>
...
