<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Olivér Falvai
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="common_back">Back</string>
    <string name="common_edit">Edit</string>
    <string name="common_save">Save</string>
    <string name="common_archive">Archive</string>
    <string name="common_more">More</string>
    <string name="common_error">Error</string>
    <string name="common_something_went_wrong">Something went wrong</string>
    <string name="common_empty">Empty</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_clear">Clear</string>
    <string name="common_interpunct">%1$s · %2$s</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_archive">Archived habits</string>
    <string name="menu_export">Backup and restore</string>

    <string name="calendar_previous_month">Previous month</string>
    <string name="calendar_next_month">Next month</string>

    <string name="action_text_no_date">No date</string>
    <string name="action_state_not_toggled">Not toggled</string>
    <string name="action_state_toggled">Toggled</string>
</resources>